--- a/app/templates/geotag.html
+++ b/app/templates/geotag.html
@@ -2,59 +2,257 @@
 <head>
 <title>Active Learning Geotagger</title>
 
+<!-- typeahead -->
 <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="{{url_for('static', filename='scripts/typeahead.bundle.min.js')}}"></script>
-<script src="http://twitter.github.com/hogan.js/builds/3.0.1/hogan-3.0.1.js"></script>
 
+<!-- leaflet -->
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
+<!-- underscore -->
+<script src="http://underscorejs.org/underscore-min.js"></script>
 
+<!-- style -->
+<style>
+    #map { height: 540; }
+    #response-container {height: 45}
+    #places {display: block; float:left}
+    #placelist-container {display: block}
+    .dangerous {background-color: red}
+</style>
+
+<!-- Jinja variables -->
+<meta id="locdata" data-tagged='{{ tagged | safe }}'>
 </head>
+
+
+
 <body>
-<label for="untagged">Untagged Items</label>
-<select id="untagged" size="10">
-    {% for loc, count in untagged %}
-    <option value="{{loc}}" pop="{{count}}">{{loc}}</option>
-    {% endfor %}
-</select>
+<!-- Places select menus -->
+<div id="places">
+    <span class="placelist-container">
+    <div>
+        <label for="untagged">Untagged Items</label>
+    </div>
 
-<label for="tagged">Tagged Items</label>
-<select id="tagged" size="10">
-    {% for loc, count, ratio in tagged %}
-    <option value="{{loc}}" pop="{{count}}">{{loc}}: {{ratio}}</option>
-    {% endfor %}
-</select>
+    <div>
+        <select id="untagged" size="10">
+        {% for loc, count in untagged %}
+        <option value="{{loc}}" count="{{count}}">{{loc}}: {{count}}</option>
+        {% endfor %}
+        </select>
+    </div>
+    </span>
+    
+    <span class="placelist-container">
+    <div>
+        <label for="tagged">Tagged Items</label>
+    </div>
+    <div>
+        <select id="tagged" size="10">
+        </select>
+    </div>
+</span>
 
-<div id="remote">
-    <input class="typeahead" type="text" placeholder="Suggested Place Name">
+<!-- Response menu -->
+
+<div id="response-container">
+    <div id="response">
+    <button id="discard_button">Discard</button>
+    <button id="accept_button">Accept</button>
+        <div>
+            <span id="remote">
+                <input class="typeahead" type="text" placeholder="Suggested Place Name">
+            </span>
+        </div>
+    </div>
 </div>
+
+</div>
+<!-- Map -->
+
+ <div id="map"></div>
+ 
 
 <script>
 
-var locSuggest = new Bloodhound({
-  datumTokenizer: function (data) {
-    console.log(data.value);
-    return data.value['results'];
-  },
-  
-  //Bloodhound.tokenizers.obj.whitespace('name'),
-  queryTokenizer: Bloodhound.tokenizers.whitespace,
-  remote: {
-        url: '/rest/overview/suggest/%QUERY',
-        filter: function (r) {
-            console.log(r);
-            return r['results'];
+$(document).ready(function() {
+    /*
+    * Add tagged locations to dropdown
+    *
+    */
+    var RATIO_THRESHOLD = 1.0;
+
+    var tagged = $('#locdata').data()['tagged'],
+        tagged_list = _.pairs(tagged),
+        tagged_select = $('#tagged');
+    
+    /*
+    * Autocomplete code
+    *
+    */
+    var selected_count;
+
+    // hide the autocomplete field on load
+    $('#response').hide()
+
+    $('select').change(function() {
+            // Save option as selected
+            var option = $(this).find('option:selected');
+
+            selectPlace(option.attr('value'));
+
+    });
+
+    var locSuggest = new Bloodhound({
+    datumTokenizer: function (data) {
+        return data.value['results'];
+    },
+    
+    queryTokenizer: Bloodhound.tokenizers.whitespace,
+    sorter: function (a, b) {
+
+            // sort responses by population/ad count priors
+            // TODO: make this a sensible prior; currently sorts by population
+
+            var ratio_a = selected_count/a['population'],
+                ratio_b = selected_count/b['population'];
+
+            console.log(a['name'], b['name'], ratio_a, ratio_b);
+            return (ratio_a > ratio_b)? 1 : -1
+    },
+    remote: {
+            url: '/rest/overview/suggest/%QUERY',
+            filter: function (r) {
+                return r['results'];
+            }
+        }
+    });
+    
+    locSuggest.initialize();
+    
+    $('#remote .typeahead').typeahead({
+            minLength: 3,
+            }, {
+    name: 'locSuggest',
+    displayKey: function (d) {
+        // Round population display to 4 decimal places
+        return d['name'] + ': ' + 
+            Math.round(selected_count/d['population']*10000)/10000;
+    },
+    source: locSuggest.ttAdapter()
+    });
+    
+    
+    /*
+    * Mapping code
+    *
+    */
+    var map = L.map('map').setView([38, -97], 4);
+    L.tileLayer("http://{s}.tiles.mapbox.com/v3/sz-giantoak.kfe07odo/{z}/{x}/{y}.png", {
+attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+        maxZoom: 18
+    }).addTo(map);
+
+    /*
+    *
+    * Add tagged items to selector and map
+    *
+    */
+    tagged_list = _.sortBy(tagged_list, function (d) {
+        return -d[1]['ratio'];
+        });
+    
+    map_keys = {};
+
+    // Iterate through tagged items
+    _.each(tagged_list, function(d) {
+
+        // Mark certain locations in red
+        var c = d[1]['ratio'] > RATIO_THRESHOLD ? 'dangerous' : '',
+            color = c == 'dangerous' ? 'red' : 'green';
+
+        tagged_select.append($('<option/>').attr({
+                'value': d[0],
+                'class': c,
+                }).data({
+                'count': d[1]['count'],
+                'ratio': d[1]['ratio'],
+                'lng': d[1]['lng'],
+                'lat': d[1]['lat']
+                }).text(d[0] + ': ' + d[1]['ratio']));
+        
+        // Add map glyph
+        var circle = L.circle([d[1].lat, d[1].lng], 
+            Math.min(Math.pow(d[1].ratio, 3), 1),
+            {
+                            color: color,
+                            fillColor: '#f03',
+                            fillOpacity: 0.5,
+                            name: d[0]
+                            }).addTo(map);
+        
+        circle.bindPopup(d[0] + ', Ratio: ' + d[1].ratio + ', Ad Counts: ' + d[1].count);
+        // Event handling for glyph clicks
+        circle.on('click', function(e) {
+            selectPlace(d[0]);
+            });
+
+        map_keys[d[0]] = circle;
+    });
+    console.log(map_keys);
+
+    /* Select a place from the options and deselect all others */
+    function selectPlace(name) {
+        $('option').prop('selected', false);
+        var option = $('option[value="' + name + '"]').prop('selected', true),
+            option_data = option.data();
+        
+        $('.typeahead')
+            .attr('placeholder', name)
+            .typeahead('val', '');
+
+        selected_count = parseFloat(option_data.count);
+        $('#response').show();
+        
+        try {
+            var popup = L.popup()
+                .setLatLng([option_data.lat, option_data.lng])
+                .setContent(name + ', Ratio: ' + option_data.ratio + ', Ad Counts: ' + option_data.count)
+                .openOn(map);
+        }
+        catch (TypeError) {
+            // do nothing
         }
     }
-});
- 
-locSuggest.initialize();
- 
-$('#remote .typeahead').typeahead({
-        minLength: 3,
-        }, {
-  name: 'locSuggest',
-  displayKey: 'name',
-  source: locSuggest.ttAdapter()
-});
 
+    /*
+    * Event handlers for updating names
+    */
+    $('#discard_button').click(function (d) {
+            var name = $('option:selected')[0].value;
+            discard(name);
+            });
+
+    function discard(name) {
+        // TODO: notify server of removal
+        
+        console.log('discarding ' + name + ' : ' + map_keys[name]);
+
+        $('option[value="' + name + '"]').remove();
+        // remove name from map
+        try {
+            map.removeLayer(map_keys[name]);
+        }
+        catch (TypeError) {
+            // do nothing
+        }
+
+        // remove name from selectors
+    }
+
+});
 </script>
+</body>
+</html>
