--- a/app/templates/geotag.html
+++ b/app/templates/geotag.html
@@ -18,7 +18,14 @@
     #map { height: 540; }
     #response-container {height: 45}
     #places {display: block; float:left}
-    #placelist-container {display: block}
+    #placelist-container {
+        display: block;
+        overflow: scroll;
+    }
+    option {
+        width: 300px;
+        overflow:visible;
+    }
     .dangerous {background-color: red}
 .twitter-typeahead .tt-hint
 {
@@ -43,7 +50,12 @@
     <div>
         <select id="untagged" size="10">
         {% for loc, count, loc_id in untagged %}
-        <option value="{{loc}}" loc_id="{{loc_id}}" count="{{count}}">{{loc}}: {{count}}</option>
+            <option value="{{loc_id}}" 
+                data-name="{{loc}}" 
+                data-count="{{count}}"
+                title="{{loc}}: {{count}}">
+                {{loc}}: {{count}}
+            </option>
         {% endfor %}
         </select>
     </div>
@@ -66,7 +78,13 @@
     <div>
         <select id="trash" size="10">
         {% for loc, count, loc_id, label in trashed %}
-        <option value="{{loc}}" loc_id="{{loc_id}}" count="{{count}}" orig="{{label}}">{{loc}}: {{count}}</option>
+            <option value="{{loc_id}}" 
+                data-name="{{loc}}" 
+                data-count="{{count}}" 
+                data-orig="{{label}}"
+                title="{{loc}}: {{count}}">
+                {{loc}}: {{count}}
+            </option>
         {% endfor %}
         </select>
     </div>
@@ -76,12 +94,12 @@
 
 <div id="response-container">
     <div id="response">
-    <button id="discard_button">Discard</button>
-    <button id="accept_button">Accept</button>
         <div>
-            <span id="remote">
+            <form id="remote">
+                <input type="submit" id="accept_button" value="Accept">
+                <input type="button" id="discard_button" value="Discard">
                 <input class="typeahead" type="text" placeholder="Suggested Place Name">
-            </span>
+            </form>
         </div>
     </div>
 </div>
@@ -162,10 +180,13 @@ $(document).ready(function() {
     
     $('#remote .typeahead').on('typeahead:selected typeahead:autocompleted',
             function (e, datum) {
+            console.log(datum);
             $('#remote .typeahead').data({
                     geo_name: datum['name'],
                     geo_id: datum['full_geoid'],
-                    population: datum['population']
+                    population: datum['population'],
+                    longitude: datum['location'][0],
+                    latitude: datum['location'][1]
                 });
             });
     
@@ -198,10 +219,11 @@ attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</
             color = c == 'dangerous' ? 'red' : 'green';
         
         tagged_select.append($('<option/>').attr({
-                'value': d[0],
+                'value': d[1]['id'],
                 'class': c,
+                'title': d[0] + ': ' + d[1]['ratio']
                 }).data({
-                'loc_id': d[1]['id'],
+                'name': d[0],
                 'count': d[1]['count'],
                 'ratio': d[1]['ratio'],
                 'lng': d[1]['lng'],
@@ -216,15 +238,15 @@ attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</
                             fillColor: '#f03',
                             fillOpacity: 0.5,
                             name: d[0]
-                            }).addTo(map);
-        
+                            });
+        circle.addTo(map);
         circle.bindPopup(d[0] + ', Ratio: ' + d[1].ratio + ', Ad Counts: ' + d[1].count);
         // Event handling for glyph clicks
         circle.on('click', function(e) {
             selectPlace(d[0]);
             });
 
-        map_keys[d[0]] = circle;
+        map_keys[d[1]['id']] = circle;
     });
     console.log(map_keys);
 
@@ -234,12 +256,11 @@ attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</
         var option = $('option[value="' + name + '"]').prop('selected', true),
             option_data = option.data();
         
-        $('.typeahead')
-            .attr('placeholder', name)
+        $('#remote .typeahead')
+            .attr('placeholder', option_data.name)
             .typeahead('val', '');
 
         selected_count = parseFloat(option_data.count);
-        $('#response').show();
         
         try {
             var popup = L.popup()
@@ -250,6 +271,10 @@ attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</
         catch (TypeError) {
             // do nothing
         }
+
+        // show autocomplete box, give it focus
+        $('#response').show();
+        $('#remote .typeahead').focus();
     }
 
     /*
@@ -258,24 +283,26 @@ attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</
     $('#discard_button').click(function (d) {
             var opt = $('option:selected');
             discard(opt);
+            $('#response').hide();
             });
     
-    $('#accept_button').click(function (d) {
+    $('#remote').submit(function (d) {
             opt = $('option:selected');
             data = $('#remote .typeahead').data();
             accept(opt, data);
+            $('#response').hide();
         });
 
     function discard(opt) {
         // TODO: notify server of removal
-        loc_id = opt.attr('loc_id');
-        console.log('discarding ' + loc_id + ' : ' + map_keys[opt.value]);
-
-        // add to trash selector
-        $('#trash').prepend(opt);
+        loc_id = opt.attr('value');
+        console.log('discarding ' + loc_id + ' : ' + map_keys[loc_id]);
 
         // remove name from selectors
-        $('option[value="' + opt.value+ '"]').remove();
+        $('option[value="' + loc_id + '"]').remove();
+        
+        // add to trash selector
+        $('#trash').prepend(opt);
         
         // remove name from map
         try {
@@ -283,18 +310,23 @@ attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</
         }
         catch (TypeError) {
             // do nothing
+            // all untagged elements go here because they aren't on the map
         }
         
         $.ajax('/geotag/discard/' + loc_id);
     }
 
     function accept(opt, data) {
-        loc_id = opt.data('loc_id');
+        loc_id = opt.attr('value');
         data['loc_id'] = loc_id;
         console.log(loc_id);
         $.post('/geotag/update/', data = data);
-    }
 
+        // remove name from selectors
+        $('option[value="' + loc_id + '"]').remove();
+
+        // TODO: sync selectors + data (add edited name)
+    }
 
 });
 </script>
